# jd-quiz-yew

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  vercel.json
graphql/: categories.graphql  opentdb_schema.json  questionswamount.graphql  questionswamountandcat.graphql
server/: index.js  index.ts  nodemon.json  package-lock.json  package.json
server-old/: index.js
server/prisma/: schema.prisma
src/: components.rs  main.rs
src/components/: Answers.rs  Front.rs  Quizbox.rs  SafeHtml.rs
