[package]
name = "jd-quiz-yew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
gloo-console = "0.2.3"
wasm-bindgen = "0.2.83"
web-sys = "0.3.60"
gloo-utils = "0.1.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
